--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@sanity/client": "^7.2.1",
+		"@sanity/image-url": "^1.1.0"
 	}
 }
